Atualizado o arquivo index
Mudança no caminho dos arquivos das imagens dos links.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<h1> Matemática, Pensamento Computacional e Ciência de Dados Educacionais </h1>
 	<p> Materiais de <a href = "./matematica_basica_matematica360graus.html"> <strong> Matemática básica </strong> </a>, <strong> pensamento computacional </strong> e <strong> ciência de dados educacionais </strong>. </p>
 	<h2> Links interessantes </h2>
-	<a href = "https://code.org/"> <img src="./imagens/logo_code.svg" alt="link para code org."/> </a> <br>
-	<a href = "https://www.computacional.com.br/"> <img src = "./imagens/logo_computacional.png" alt="link para pensamento computacional Brasil"/> </a> <br>
-	<a href = "https://www.youtube.com/channel/UC6rIVPpnfB8xEcIJBCvA-Aw/featured"> <img src="./imagens/logo_matematica360graus.png" alt="link para o canal matemática 360 graus."/> </a> <br>
+	<a href = "https://code.org/"> <img src="./logo_code.svg" alt="link para code org."/> </a> <br>
+	<a href = "https://www.computacional.com.br/"> <img src = "./logo_computacional.png" alt="link para pensamento computacional Brasil"/> </a> <br>
+	<a href = "https://www.youtube.com/channel/UC6rIVPpnfB8xEcIJBCvA-Aw/featured"> <img src="./logo_matematica360graus.png" alt="link para o canal matemática 360 graus."/> </a> <br>
 
 </body>
 </html>
