--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title> Matemática 360 graus</title>
-		<link rel="icon" href="./imagens/canal/logo_matematica360graus1.png">
+		<link rel="icon" href="logo_matematica360graus1.png">
 		<link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -91,21 +91,21 @@
     <div id="link-box">
     	<div class="links">
     		<a href = "https://code.org/">
-    			<img src="./imagens/links/logo_code.svg" alt="link para code org."/>
+    			<img src="logo_code.svg" alt="link para code org."/>
     			<p>Code.org</p>
     		</a>
     	</div>
 
     	<div class="links">
 			<a href = "https://www.computacional.com.br/">
-				<img src = "./imagens/links/logo_computacional.png" alt="link para pensamento computacional Brasil" id="img-link1"/>
+				<img src = "logo_computacional.png" alt="link para pensamento computacional Brasil" id="img-link1"/>
 				<p>Pensamento Computacional</p>
 			</a>
 		</div>
 
 		<div class="links">
 			<a href = "https://www.youtube.com/channel/UC6rIVPpnfB8xEcIJBCvA-Aw/featured">
-				<img src="./imagens/links/logo_matematica360graus.png" alt="link para o canal matemática 360 graus." id="img-link2" />
+				<img src="logo_matematica360graus.png" alt="link para o canal matemática 360 graus." id="img-link2" />
 				<p>Canal Matemática 360 graus</p>
 			</a>
 		</div>
